// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен нормально отрендериться список табов на морде (для экспа с кредитами) 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=cars&section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,credit",
        "name": "bank-promo",
        "title": "Кредиты",
        "url": "link/bank-promo/?",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов на морде 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=cars&section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?section=all",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars",
      },
    ]
  }
/>
`;
